clusters/cloudydad/apps/wakapi/app/wakapi-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wakapi
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
